--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ macholib==1.14
 modulegraph==0.18
 MouseInfo==0.1.3
 msgpack==1.0.2
+pretty-errors==1.2.19
+py2app==0.22
 PyAutoGUI==0.9.52
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
